RESOLVED FIXED304797
Fix subtle bug in SortedArrayMap's lessThanASCIICaseFolding()
https://bugs.webkit.org/show_bug.cgi?id=304797
Summary Fix subtle bug in SortedArrayMap's lessThanASCIICaseFolding()
Chris Dumez
Reported 2025-12-30 21:04:04 PST
Fix subtle bug in SortedArrayMap's lessThanASCIICaseFolding().
Attachments
Chris Dumez
Comment 1 2025-12-30 21:05:47 PST
EWS
Comment 2 2025-12-31 07:58:27 PST
Committed 305019@main (c52e971ff654): <https://commits.webkit.org/305019@main> Reviewed commits have been landed. Closing PR #55958 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-12-31 07:59:12 PST
Note You need to log in before you can comment on or make changes to this bug.