Fix subtle bug in SortedArrayMap's lessThanASCIICaseFolding() https://bugs.webkit.org/show_bug.cgi?id=304797

Reviewed by Anne van Kesteren and Darin Adler.

Fix subtle bug in SortedArrayMap's lessThanASCIICaseFolding() where it would
treat "ab" as greater than "abc", even though it is shorter.

Test: Tools/TestWebKitAPI/Tests/WTF/SortedArrayMap.cpp

* Source/WTF/wtf/SortedArrayMap.h:
(WTF::lessThanASCIICaseFolding):
* Tools/TestWebKitAPI/Tests/WTF/SortedArrayMap.cpp:
(TEST(WTF, LessThanASCIICaseFoldingDirectComparison)):

Canonical link: https://commits.webkit.org/305019@main