Source/WTF/wtf/SortedArrayMap.h
@@ -250,7 +250,7 @@ template<typename CharacterType> inline bool lessThanASCIICaseFolding(std::span<
         if (lowercaseCharacter != literalCharacter)
             return lowercaseCharacter < literalCharacter;
     }
-    return literalWithNoUppercase.length() < characters.size();
+    return characters.size() < literalWithNoUppercase.length();
 }
 
 inline bool lessThanASCIICaseFolding(StringView string, ASCIILiteral literalWithNoUppercase)
